--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "typings": "dist/index",
   "type": "module",
   "files": [
-    "index.js",
-    "index.d.ts"
+    "dist/index.js",
+    "dist/index.d.ts"
   ],
   "scripts": {
     "test": "jest",
+    "dev": "tsc-watch",
     "prepublishOnly": "npm run compile",
     "publish": "npm publish --access public",
     "compile": "npm run clean && tsc -p",
@@ -32,6 +33,9 @@
     "filter",
     "trim"
   ],
+  "prettier": {
+    "arrowParens": "avoid"
+  },
   "devDependencies": {
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
