--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@jericirenej/object-filter",
   "description": "Return an object with trimmed properties based on supplied list of keys and a filter type (include | exclude).",
   "author": "Irenej Jeric",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "license": "ISC",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -19,8 +19,7 @@
     "prepublishOnly": "npm run compile",
     "compile": "npm run clean && tsc",
     "build": "tsc",
-    "clean": "rm -rf dist/*.js && npm run copyReadme",
-    "copyReadme": "cp README.md dist/"
+    "clean": "rm -rf dist/*"
   },
   "repository": {
     "type": "git",
