--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "ts-jest": "^28.0.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.6.4"
+  },
+  "engines": {
+    "node": ">=14.17.0"
   }
 }
