--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "author": "Irenej Jeric",
   "version": "1.2.0",
   "license": "ISC",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "exports": {
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.cjs"
+  },
+  "types": "dist/index.d.ts",
   "type": "module",
   "files": [
-    "dist/index.js",
-    "dist/utils.js",
-    "dist/*.d.ts",
+    "dist",
     "README.md"
   ],
   "scripts": {
     "test": "jest",
     "dev": "tsc-watch",
     "prepublishOnly": "npm run compile",
-    "compile": "npm run clean && tsc",
+    "compile:mjs": "babel src --out-dir ./dist --extensions .ts --out-file-extension .mjs --config-file ./babel.config.cjs",
+    "compile:cjs": "babel src --out-dir ./dist --extensions .ts --out-file-extension .cjs --config-file ./babel.config.compat.cjs",
+    "compile": "npm run clean && npm run compile:mjs && npm run compile:cjs && tsc --emitDeclarationOnly",
     "build": "tsc",
     "clean": "rm -rf dist/*"
   },
@@ -45,10 +49,15 @@
     "arrowParens": "avoid"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.0",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-typescript": "^7.17.12",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "babel-plugin-add-import-extension": "^1.6.0",
     "eslint": "^8.15.0",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.1",
