--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "type": "module",
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE.md"
   ],
   "scripts": {
     "test": "jest",
