--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jericirenej/object-filter",
-  "description": "Return an object with filtered properties based on a supplied list of filter keys. Exclude/include filtering options and recursive operation available.",
+  "description": "Recursive object filtering based on a supplied list of filter keys. Exclude/include filtering options. String and/or regex matching available.",
   "author": "Irenej Jeric",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "license": "ISC",
   "main": "./dist/index.cjs",
   "exports": {
@@ -44,8 +44,8 @@
     "javascript",
     "typescript",
     "filter",
-    "object-trim",
-    "trim"
+    "recursive-filter",
+    "recursive"
   ],
   "prettier": {
     "arrowParens": "avoid"
